# backup-manager

./: .gitignore  BUILD_EXE.bat  BUILD_README.md  BackupManager.spec  BackupManagerDebug.spec  Backup_Manager_User_Guide_EN.docx  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  backup_engine.py  build_msi.py  build_nuitka.py  build_pyinstaller.py  config.py  email_notifier.py  encryption.py  gui.py  innosetup.iss  installer.py  integrity_check.py  pyproject.toml  requirements.txt  scheduler.py  secure_memory.py  setup_msi.py  storage.py  verification.py  wizard.py
.claude/: guard_destructive.sh  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
assets/: License.rtf  launch.vbs
scripts/: s3_bandwidth_bench.py
src/: __init__.py  __main__.py  installer.py
tests/: conftest.py  test_autostart.py  test_backup_engine.py  test_backup_engine_coverage.py  test_backup_engine_failures.py  test_base_storage.py  test_build_msi.py  test_collector_edge_cases.py  test_config.py  test_delete_profile_backups.py  test_disk_full_scenarios.py  test_duplicate_profile_names.py  test_email.py  test_encryption.py  test_encryption_edge_cases.py  test_encryptor.py  test_events.py  test_incremental_differential.py  test_integrity_failfast.py  test_integrity_verifier.py  test_integrity_verifier_coverage.py  test_local_writer.py  test_manifest_upload.py  test_mirror_content_consistency.py  test_mirror_failures.py  test_network_storage.py  test_parametrized.py  test_pipeline.py  test_precheck_targets.py  test_proton_storage.py  test_remote_writer_failures.py  test_rotator_edge_cases.py  (+17 more)
(+102 files in other folders)
