[project]
name = "backup-manager"
version = "3.1.5"
description = "Backup management system with encryption, scheduling, and multi-destination support"
authors = [{name = "Loic Ader"}]
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.11"

dependencies = [
    "cryptography>=43.0.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    "paramiko>=3.0.0",
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "moto[s3]>=5.0.0",
    "ruff>=0.8.0",
    "black>=24.0.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80 -v"

[tool.coverage.run]
omit = [
    "src/ui/*",
    "src/__main__.py",
    "src/installer.py",
    "src/core/update_checker.py",
    # Remote backends need real infrastructure or complex mocking
    "src/storage/network.py",
    "src/storage/sftp.py",
    "src/storage/s3.py",
    # Standalone verification module (pipeline verifier is tested)
    "src/security/integrity_check.py",
    "src/security/verification.py",
    # Remote-only pipeline phases
    "src/core/phases/remote_writer.py",
    "src/core/phases/mirror.py",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["build_msi.py", "build_pyinstaller.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
